--- a/style.css
+++ b/style.css
@@ -25,7 +25,12 @@ html{
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
-
+.desktop{
+    display: block;
+}
+.mobil{
+    display: none;
+}
 /* DISTANCE CONTAINERS */
 section{
     padding: 100px 0;
@@ -1029,17 +1034,36 @@ footer span a:hover{
     cursor: pointer;
     margin-top: 5px;
 }
+.content-modal form>button>i{
+    margin: 0 10px;
+}
 .content-modal h6{
     color: #092655;
     font-size: 14px;
     text-align: center;
     position: absolute;
-    bottom: -20%;
+    bottom: -15%;
     left: 0;
     right: 0;
     cursor: pointer;
 }
 
+.inputs-div{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 0;
+}
+.inputs-div input{
+    width: 100%;
+    height: 50px;
+    border: 1px solid #ddd;
+    margin: 2% 0;
+    font-size: 1.1em;
+    padding: 0 4%;
+    text-decoration: none;
+    outline: none;
+}
 /* responsive media query start */
 @media(max-width: 2560px){
     .modal-content {
@@ -1133,6 +1157,13 @@ footer span a:hover{
     .new-products ul {
         grid-template-columns: 1fr 1fr;
     }
+    .desktop{
+        display: none;
+    }
+    .mobil{
+        display: block;
+    }
+
 }
 
 @media (max-width: 690px) {
